--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="w3layouts-banner-top">
 							<div class="container">
 								<div class="agileits-banner-info jarallax">
-	
+	                               <h3 class="agile-title">醉美香山</h3>
 								</div>	
 							</div>
 						</div>
