图片改为使用七牛云

--- a/index.html
+++ b/index.html
@@ -123,68 +123,68 @@
 					<div id="slider" class="flexslider">
 					  <ul class="slides">
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/6.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/6.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 					  </ul>
 					</div>
 					<div id="carousel" class="flexslider">
 					  <ul class="slides">
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/6.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/6.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/7.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/8.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/8.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" />
 						</li>
 						<li>
-							<img src="images/9.jpg" alt="" />
+							<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" />
 						</li>
 					  </ul>
 					</div>
@@ -207,58 +207,58 @@
 			<section class="grid3d vertical" id="grid3d">
 				<div class="grid-wrap">
 					<div class="grid">
-						<figure class="col-md-4 effect-zoe"><img src="images/10.jpg" alt="wanderlust"><figcaption><h4>香山红叶</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/11.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/12.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/13.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/14.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/16.jpg" alt="wanderlust"><figcaption><h4>南马场水库</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/17.jpg" alt="wanderlust"><figcaption><h4>香山俯瞰</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/18.jpg" alt="wanderlust"><figcaption><h4>香山俯瞰</h4></figcaption></figure>
-						<figure class="col-md-4 effect-zoe"><img src="images/19.jpg" alt="wanderlust"><figcaption><h4>路线图</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/10.jpg" alt="wanderlust"><figcaption><h4>香山红叶</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/11.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/12.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/13.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/14.jpg" alt="wanderlust"><figcaption><h4>秋意小道</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/16.jpg" alt="wanderlust"><figcaption><h4>南马场水库</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/17.jpg" alt="wanderlust"><figcaption><h4>香山俯瞰</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/18.jpg" alt="wanderlust"><figcaption><h4>香山俯瞰</h4></figcaption></figure>
+						<figure class="col-md-4 effect-zoe"><img src="http://oy3jbyryn.bkt.clouddn.com/19.jpg" alt="wanderlust"><figcaption><h4>路线图</h4></figcaption></figure>
 					</div>
 				</div>
 				<div class="content">
 					<div>
-						<div class="dummy-img dummy-img-1"><img src="images/10.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-1"><img src="http://oy3jbyryn.bkt.clouddn.com/10.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">香山红叶</p>
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-2"><img src="images/11.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-2"><img src="http://oy3jbyryn.bkt.clouddn.com/11.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">秋意小道</p>
 
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-3"><img src="images/12.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-3"><img src="http://oy3jbyryn.bkt.clouddn.com/12.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">秋意小道</p>
 
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-4"><img src="images/13.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-4"><img src="http://oy3jbyryn.bkt.clouddn.com/13.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">秋意小道</p>
 
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-5"><img src="images/14.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-5"><img src="http://oy3jbyryn.bkt.clouddn.com/14.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">秋意小道</p>
 	
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-7"><img src="images/16.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-7"><img src="http://oy3jbyryn.bkt.clouddn.com/16.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">南马场水库</p>
 
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-8"><img src="images/17.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-8"><img src="http://oy3jbyryn.bkt.clouddn.com/17.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">香山俯瞰</p>
 
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-9"><img src="images/18.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-9"><img src="http://oy3jbyryn.bkt.clouddn.com/18.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">香山俯瞰</p>
 					</div>
 					<div>
-						<div class="dummy-img dummy-img-10"><img src="images/19.jpg" alt="wanderlust"></div>
+						<div class="dummy-img dummy-img-10"><img src="http://oy3jbyryn.bkt.clouddn.com/19.jpg" alt="wanderlust"></div>
 						<p class="dummy-text aitsheadingw3">路线图</p>
 					</div>
 					<span class="loading"></span>
@@ -276,21 +276,21 @@
 				<div class="col-md-4 col-sm-4 col-xs-6 wthree-s1 text-center pricing">
 					<div class="w3l-price"><span class="sicon">时间</span><p>6个小时</p></div>
 					<div class="price-top">
-						<img src="images/7.jpg" alt="" class="img-responsive"/>
+						<img src="http://oy3jbyryn.bkt.clouddn.com/7.jpg" alt="" class="img-responsive"/>
 						<h3>出行时间</h3>
 					</div>
 					<div class="price-bottom">
 						<ul>
-							<li><b>周六或者周日</b> 9:00</li>
-							<li>受天气影响,具体时间待定</li>
+							<li><b>周六早上</b> 9:00</li>
+							<li>如遇特殊天气,活动改期或取消</li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-6 wthree-s1 text-center pricing p2">
 					<div class="w3l-price"><span class="sicon">逃票</span><p>免费</p></div>
 					<div class="price-top">
-						<img src="images/9.jpg" alt="" class="img-responsive"/>
-						<h3>费用</h3>
+						<img src="http://oy3jbyryn.bkt.clouddn.com/9.jpg" alt="" class="img-responsive"/>
+						<h3>活动费用</h3>
 					</div>
 					<div class="price-bottom">
 						<ul>
@@ -302,7 +302,7 @@
 				<div class="col-md-4 col-sm-4 col-xs-6 wthree-s1 text-center pricing p3">
 					<div class="w3l-price"><span class="sicon">集合</span><p>信息</p></div>
 					<div class="price-top">
-						<img src="images/6.jpg" alt="" class="img-responsive"/>
+						<img src="http://oy3jbyryn.bkt.clouddn.com/6.jpg" alt="" class="img-responsive"/>
 						<h3>集合信息</h3>
 					</div>
 					<div class="price-bottom">
